fix: add top padding to prevent product options touching announcement bar on tablet viewport

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -13,7 +13,7 @@
   @media screen and (max-width: $break-medium)
     +flexbox
     +flex-direction(column)
-    padding-top: 0
+    padding-top: 25px
 
 .product-heading
   +flexbox
